--- a/flex.scss
+++ b/flex.scss
@@ -59,6 +59,9 @@
     }
 
     // main-axis
+    &.justify-center{
+        justify-content: center;
+    }
     &.justify-between{
         justify-content: space-between;
     }
